2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py:
	* smoketesting/tarball-conversion.config: Add way to put
	gtksourceview-1.0 in the modules files. Further, switch to urllib2.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions: Update for GNOME 2.21.4.

2007-12-22  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Search for
	tarball-conversion.config in the same directory as the
	convert-to-tarballs script.

2007-12-18  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Support <waf>.

2007-12-05  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions:
	Update for GNOME 2.21.3.

2007-11-28  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable:
	Update for GNOME 2.20.2.

2007-11-15  Elijah Newren  <newren gmail com>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions:
	Update for 2.21.2

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* versions: Update again.

2007-10-30  Kjartan Maraas,,23491770  <kmaraas@gnome.org>

	* versions: Update this for 2.21.1.

2007-09-19  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config:
	* versions-stable:
	Time for GNOME 2.20.0.

2007-08-29  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions:
	Update for GNOME 2.19.91.

2007-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* smoketesting/tarball-conversion.config: Add new modules
	accerciser and gnome-devel-docs to the devtools set.

2007-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc: skip mozilla to make
	building a release simpler.
