@@ -1,5 +1,10 @@
 2007-12-23  Olav Vitters  <olav@bkor.dhs.org>
 
+	* smoketesting/convert-to-tarballs.py: Convert to optparse instead of
+	getopt. Further, don't print the name of the first module file twice.
+
+2007-12-23  Olav Vitters  <olav@bkor.dhs.org>
+
 	* smoketesting/convert-to-tarballs.py:
 	* smoketesting/tarball-conversion.config: Add way to put
 	gtksourceview-1.0 in the modules files. Further, switch to urllib2.
